fix grey text size and alignment

--- a/packages/ui/src/components/about/About.module.css
+++ b/packages/ui/src/components/about/About.module.css
@@ -1,9 +1,9 @@
 @import '../../utils/color.css';
 
 .container {
-  padding: 4rem;
+  padding-left: 77px;
   max-width: 1200px;
-  margin: 0 0;
+  margin: 16px 32px;
 }
 
 .aboutUs {
@@ -20,7 +20,7 @@
 }
 
 .description, .subDescription {
-  font-size: 1.125rem;
+  font-size: 20px;
   color: var(--text-gray);
   max-width: 1000px;
 }
@@ -64,6 +64,10 @@
 }
 
 @media (max-width: 768px) {
+  .container {
+    padding-left: 0px;
+    max-width: 1200px;
+  }
   .logoGrid {
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
